tests/baselines/reference/numericNamedPropertyDuplicates.errors.txt
numericNamedPropertyDuplicates.ts(3,5): error TS2300: Duplicate identifier '1.0'.
numericNamedPropertyDuplicates.ts(5,12): error TS2300: Duplicate identifier '2'.
numericNamedPropertyDuplicates.ts(9,5): error TS2300: Duplicate identifier '2'.
numericNamedPropertyDuplicates.ts(10,5): error TS2300: Duplicate identifier '2'.
numericNamedPropertyDuplicates.ts(14,5): error TS2300: Duplicate identifier '1'.
numericNamedPropertyDuplicates.ts(15,5): error TS2300: Duplicate identifier '1'.
numericNamedPropertyDuplicates.ts(20,5): error TS1005: ',' expected.


==== numericNamedPropertyDuplicates.ts (7 errors) ====
    class C {
        1: number;
        1.0: number;
        ~~~
!!! error TS2300: Duplicate identifier '1.0'.
        static 2: number;
        static 2: number;
               ~
!!! error TS2300: Duplicate identifier '2'.
    }
    
    interface I {
        2: number;
        ~
!!! error TS2300: Duplicate identifier '2'.
        2.: number;
        ~~
!!! error TS2300: Duplicate identifier '2'.
    }
    
    var a: {
        1: number;
        ~
!!! error TS2300: Duplicate identifier '1'.
        1: number;
        ~
!!! error TS2300: Duplicate identifier '1'.
    }
    
    var b = {
        2: 1
        2: 1
        ~
!!! error TS1005: ',' expected.
    }